--- a/static/menu.css
+++ b/static/menu.css
@@ -45,6 +45,7 @@
 .menu-alide a:hover {
     border-bottom: 1px solid #000;
     color: rgb(53, 52, 52);
+    /* color: rgb(37,155,36); */
 }
 
 .menu-alide a > div {
@@ -59,21 +60,22 @@
 
 .pendant-line {
     position: fixed;
-    width: 4px;
+    width: 5px;
     top: -10px;
     height: 0;
     z-index: 99;
     
     border-radius: 2em;
-    right: 33px;
-    background-image: linear-gradient(135deg,#52b6e7,#2960cf);
+    right: 50px;
+    background-image: linear-gradient(135deg,#fa742b,#f9c89c,#fa742b);
     background-size: contain;
+    box-shadow: 2px -2px 10px rgb(161, 160, 160);
 }
 
 .pendant-scroll {
     z-index: 100;
     position: fixed;
-    width: 50px;
+    width: 80px;
     right: 10px;
-    top: -50px;
+    top: -100px;
 }
