--- a/static/index.css
+++ b/static/index.css
@@ -427,7 +427,7 @@ p {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
-    height: 50vw;
+    height: 100vh;
     left: 0;
     top: 0px;
     background-color: #343434;
