--- a/static/menu.css
+++ b/static/menu.css
@@ -1,7 +1,7 @@
 .menu-alide {
     width: 20%;
     min-height: 100vh;
-    background-color: #f6f6f6;
+    background-color: #202428;
     position: fixed;
     z-index: 9999;
 }
@@ -28,6 +28,7 @@
     margin: 1rem 0 3rem 0;
     font-size: 1.7rem;
     font-weight: bold;
+    color: #fff;
 }
 
 /* 链接 */
@@ -36,16 +37,15 @@
     width: 85%;
     /* height: 2rem; */
     padding: 20px 0 10px 0;
-    color: rgb(123 122 122);
+    color: rgb(190 190 190);
     font-size: 0.95rem;
     font-weight: 600;
     border-bottom: 1px solid transparent;
 }
 
 .menu-alide a:hover {
-    border-bottom: 1px solid #000;
-    color: rgb(53, 52, 52);
-    /* color: rgb(37,155,36); */
+    border-bottom: 1px solid #5fe8dd;
+    color: #5fe8dd;
 }
 
 .menu-alide a > div {
@@ -67,9 +67,10 @@
     
     border-radius: 2em;
     right: 50px;
-    background-image: linear-gradient(135deg,#fa742b,#f9c89c,#fa742b);
+    background-image: linear-gradient(135deg,#3c8ce7,#00eaff);
     background-size: contain;
     box-shadow: 2px -2px 10px rgb(161, 160, 160);
+    
 }
 
 .pendant-scroll {
@@ -78,4 +79,5 @@
     width: 80px;
     right: 10px;
     top: -100px;
+    
 }
