--- a/static/index.css
+++ b/static/index.css
@@ -44,6 +44,8 @@ body {
     min-height: 100vh;
     width: 100vw;
     overflow-x: hidden;
+    background-color: #000;
+    color: #fff;
 }
 
 
@@ -314,18 +316,35 @@ img {
 .kungfu-title {
     font-family: 'cmunrm';
     margin-top: 2rem !important;
+    color: #0f6c64;
 
 }
 
 .kungfu-subtitle {
     font-family: 'cmunrm';
     margin-top: 2rem !important;
+    color: #1cc5b7;
 }
+
+.layui-timeline-title {
+    color: #5fe8dd !important;
+    font-family: 'cmunrm';
+    font-size: 1.3rem !important;
+}
+
+.layui-elem-quote {
+    border-left: 5px solid #5fe8dd;
+    background-color: #000000;
+    color: #c8c8c8;
+    font-family: 'cmunrm';
+}
+
 
 p {
     text-indent: 2em !important;
     word-break: break-word !important;  
     line-height: 1.6 !important;
+    font-size: 1.2rem;
 }
 
 #test10, #test11, #test12, #test13, #dream-test12,#dream-test13,#dream-test14{
@@ -373,6 +392,11 @@ p {
 .kungfu-box > img {
     width: 80%;
     margin: 0 0 0 10%;
+    
+}
+
+.kungfu-box img {
+    box-shadow: 2px 2px 10px #fff;
 }
 
 
@@ -416,20 +440,34 @@ p {
 
 .layui-carousel-ind {
     height: 20px !important;
+
 }
 
 
 /* 加载动画 */
 #loading {
-    background-image: url('https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/740a55f1-21b4-4621-b41a-117194f22d6f.webp');
     position: fixed;
     z-index: 999999;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
     left: 0;
     top: 0px;
-    background-color: #343434;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    background-color: #03030c;
+    width: 100vw;
+    height: 100vh;
+}
 
+#loading-content {
+    width: 50%;
+    
+}
+
+
+.layui-carousel>[carousel-item]>* {
+    background-color: #000 !important;
+}
+
+.layui-carousel {
+    box-shadow: 2px 2px 10px #fff;
 }
