--- a/static/index.css
+++ b/static/index.css
@@ -53,9 +53,10 @@ body {
 main {
     margin-left: 20vw;
     width: 79vw;
-    min-height: 100%;
     background-color: #000;
 }
+
+
 
 .zsiq_theme1.zsiq_floatmain {
     display: none !important;
@@ -81,7 +82,7 @@ main {
 /* design */
 
 .desi-intro {
-    height: 300px;
+    height: 200px;
     font-size: 2rem;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
@@ -275,55 +276,54 @@ img {
     /* height: 100vh; */
     line-height: 1.6em;
     font-size: 1.4rem;
-
+    text-align: justify;
     
 }
+
+.about-content-text > div {
+    transition: color 0.8s;
+}
+
+.about-content-text > div:hover {
+    color: #20bdff;
+    
+}
+
+.layui-timeline-title > img {
+    box-shadow: 2px 2px 10px #fff;
+    width: 48%;
+}
+
 
 .title:hover {
-    /* color: #04c0c0; */
-    /* animation: textColorShow 1s; */
-    -webkit-animation: textColorShow 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: textColorShow 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    
+	/* animation: textColorShow 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both; */
+    /* background:-webkit-gradient(linear,30% 20%,80% 80%,from(#20bdff),to(#a5fecb));
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent; */
 }
 
-@keyframes textColorShow {
-    0% {
-        background:-webkit-gradient(linear,30% 20%,80% 80%,from(#fff),to(#fff));
-        -webkit-background-clip:text;
-        -webkit-text-fill-color:transparent;
+/* @-webkit-keyframes textColorShow{
+ 
+    from{
+        
+    -webkit-filter:hue-rotate(0deg);
+        
     }
-    100% {
-        background:-webkit-gradient(linear,30% 20%,80% 80%,from(#20bdff),to(#a5fecb));
-        -webkit-background-clip:text;
-        -webkit-text-fill-color:transparent;
+        
+    to{
+        
+    -webkit-filter:hue-rotate(-360deg);
+        
     }
-}
-
-@keyframes slide-in-elliptic-right-fwd {
-    0% {
-      -webkit-transform: translateX(800px) rotateY(-30deg) scale(0);
-              transform: translateX(800px) rotateY(-30deg) scale(0);
-      -webkit-transform-origin: -100% 50%;
-              transform-origin: -100% 50%;
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0) rotateY(0) scale(1);
-              transform: translateX(0) rotateY(0) scale(1);
-      -webkit-transform-origin: -1800px 50%;
-              transform-origin: -1800px 50%;
-      opacity: 1;
-    }
-  }
+        
+} */
 
 .about-content-text .title {
     font-weight:1000;
     font-size: 4rem;
     font-family: 'Times New Roman', Times, serif;
-    /* margin-bottom: 0rem; */
-    /* transition: color 1s; */
-    line-height: 5rem;
+    margin-bottom: 3rem;
+    
 
 }
 
@@ -351,6 +351,24 @@ img {
     -webkit-animation: slide-in-elliptic-right-fwd 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both 1.6s;
 	        animation: slide-in-elliptic-right-fwd 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both 1.6s;
 }
+
+@keyframes slide-in-elliptic-right-fwd {
+    0% {
+      -webkit-transform: translateX(800px) rotateY(-30deg) scale(0);
+              transform: translateX(800px) rotateY(-30deg) scale(0);
+      -webkit-transform-origin: -100% 50%;
+              transform-origin: -100% 50%;
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0) rotateY(0) scale(1);
+              transform: translateX(0) rotateY(0) scale(1);
+      -webkit-transform-origin: -1800px 50%;
+              transform-origin: -1800px 50%;
+      opacity: 1;
+    }
+  }
+  
 
 .about-content-img >img {
     /* height: 60vh; */
@@ -482,7 +500,7 @@ p {
     margin: 2rem auto 0 auto;
 }
 
-.content-img-row-4 > img {
+.content-img-row-4 img {
     box-shadow: 2px 2px 10px #fff;
     width: 25%;
 }
@@ -564,3 +582,89 @@ p {
 .layui-carousel {
     box-shadow: 2px 2px 10px #fff;
 }
+
+.design-box-4 {
+    width: 76vw;
+}
+
+.design-box-4 img {
+    width: 25%;
+}
+
+/* card-box 特效 */
+@property --rotating {
+    syntax: "<angle>";
+    initial-value: 132deg;
+    inherits: false;
+}
+  
+:root {
+--card-box-height: 34.7vw;
+--card-box-width: 78vw;
+}
+
+
+
+.card-box {
+    background: #000;
+    /*   width: var(--card-box-width);
+    height: var(--card-box-height); */
+    padding: 3px;
+    position: relative;
+    border-radius: 6px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    color: rgb(88 199 250 / 0%);
+    margin: 1% 1% 1% 0;
+    /* overflow: hidden; */
+}
+
+
+
+
+.card-box::before {
+    content: "";
+    width: 101%;
+    height: 101%;
+    border-radius: 8px;
+    background-image: linear-gradient(
+        var(--rotating)
+        , #5ddcff, #3c67e3 43%, #4e00c2);
+    position: absolute;
+    z-index: -999;
+    top: -0.5%;
+    left: -0.5%;
+    /* animation: spin 2.5s linear infinite; */
+}
+
+.card-box::after {
+    position: absolute;
+    content: "";
+    top: calc(var(--card-box-height) / 6);
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    transform: scale(0.8);
+    filter: blur(calc(var(--card-box-height) / 6));
+    background-image: linear-gradient(
+        var(--rotating)
+        , #5ddcff, #3c67e3 43%, #4e00c2);
+        opacity: 1;
+    transition: opacity .5s;
+    /* animation: spin 2.5s linear infinite; */
+}
+
+@keyframes spin {
+    0% {
+        --rotating: 0deg;
+    }
+    100% {
+        --rotating: 360deg;
+    }
+}
+  
