--- a/static/index.css
+++ b/static/index.css
@@ -383,6 +383,61 @@ img {
     color: #fff;
 }
 
+.kungfu-article-box > div {
+    width: 100%;
+}
+
+.kungfu-article-box .title-box {
+    justify-content: flex-end;
+}
+
+.kungfu-article-box .img0 {
+    
+    /* height: 300px; */
+}
+
+.kungfu-article-box .img1 {
+    
+}
+
+.kungfu-article-box .img2 {
+    
+}
+
+.kungfu-article-box .img3 {
+    
+}
+
+.kungfu-article-box .img4 {
+    
+}
+
+.kungfu-article-box .img5 {
+    
+}
+
+.kungfu-article-box .img6 {
+    
+}
+
+.kungfu-article-box .img7 {
+    
+}
+
+
+
+.kungfu-imgs-5 {
+    width: 90%;
+    box-shadow: 2px 2px 10px #fff;
+    margin: 20px auto;
+}
+
+.kungfu-imgs-5 > img {
+    width: 20%;
+}
+
+
+
 .layui-field-title {
     margin-top: 20px !important;
 }
@@ -404,6 +459,7 @@ img {
     margin-top: 2rem !important;
     color: #69f6f6;
 }
+
 
 .layui-timeline-title {
     color: #69f6f6 !important;
@@ -455,12 +511,18 @@ p {
 
 .arts-cover-icon {
     width: 14%;
+    font-size: 6rem;
 }
 
 .arts-cover-text {
     width: 26%;
     font-size: 5rem;
     font-family: 'cmunrm';
+}
+
+.arts-p {
+    width: 90%;
+    margin: 0 auto;
 }
 
 .carousel-desc {
@@ -475,6 +537,67 @@ p {
 .kungfu-box > img {
     width: 80%;
     margin: 0 0 0 10%;
+}
+
+.kungfu-wall-box, .kungfu-wall-box-2 {
+    position: relative;
+    width: 90%;
+    margin: 20px auto;
+    box-shadow: 2px 2px 10px #fff;
+}
+
+.kungfu-wall-box-2 {
+    padding-bottom: 3vw;
+}
+
+.kungfu-wall-box :nth-child(1) {
+    position: absolute;
+    width: 18%;
+    left: 8%;
+}
+
+.kungfu-wall-box :nth-child(2) {
+    box-shadow: none;
+}
+
+.kungfu-wall-box :nth-child(3) {
+    position: absolute;
+    right: 2%;
+    width: 18%;
+    top: 4%;
+}
+
+/*  */
+.kungfu-wall-box-2 :nth-child(1) {
+    position: absolute;
+    width: 45%;
+    left: -1%;
+    bottom: -1%;
+}
+
+.kungfu-wall-box-2 :nth-child(2) {
+    box-shadow: none
+}
+
+.kungfu-wall-box-2 :nth-child(3) {
+    position: absolute;
+    right: 2%;
+    width: 50%;
+    bottom: -11%;
+}
+
+.kungfu-p {
+    width: 100%;
+    text-align: center;
+}
+
+.kungfu-p a {
+    text-decoration: none;
+    color: #108b96;
+}
+
+.kungfu-p a:hover {
+    color: #87c0ca;
 }
 
 .link{
