--- a/static/index.css
+++ b/static/index.css
@@ -433,9 +433,12 @@ img {
 }
 
 .kungfu-imgs-5 > img {
-    height: 32vw;
+    height: 27vw;
 }
 
+p {
+    text-align: justify !important;
+}
 
 
 .layui-field-title {
@@ -543,20 +546,21 @@ p {
     position: relative;
     width: 90%;
     margin: 20px auto;
-    box-shadow: 2px 2px 10px #fff;
 }
 
 .kungfu-wall-box-2 {
     padding-bottom: 3vw;
-    background-color: #f5f6f7;
+    /* background-color: #f5f6f7; */
     box-shadow: none;
 
 }
 
 .kungfu-wall-box :nth-child(1) {
     position: absolute;
-    width: 18%;
-    left: 8%;
+    width: 17%;
+    left: 4%;
+    box-shadow: 2px 2px 10px #fff;
+
 }
 
 .kungfu-wall-box :nth-child(2) {
@@ -565,9 +569,11 @@ p {
 
 .kungfu-wall-box :nth-child(3) {
     position: absolute;
-    right: 2%;
-    width: 18%;
+    right: 4%;
+    width: 15%;
     top: 4%;
+    box-shadow: 2px 2px 10px #fff;
+
 }
 
 /*  */
