--- a/static/index.css
+++ b/static/index.css
@@ -437,7 +437,7 @@ img {
 }
 
 p {
-    text-align: justify;
+    text-align: justify !important;
 }
 
 
@@ -468,6 +468,13 @@ p {
     color: #69f6f6 !important;
     font-family: 'cmunrm';
     font-size: 1.3rem !important;
+}
+
+.layui-elem-quote {
+    border-left: 5px solid #5fe8dd;
+    background-color: #000000;
+    color: #c8c8c8;
+    font-family: 'cmunrm';
 }
 
 .layui-elem-quote-p {
